--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,7 @@ body {
     font-family: "Roboto", sans-serif;
 
     .container {
-        width: 360px;
+        width: 100vw;
         header {
             display: flex;
             color: white;
@@ -68,12 +68,21 @@ body {
                     letter-spacing: 1px;
                     margin-bottom: 10px;
 
+                    @media (min-width: 700px) {
+                        font-size: 36px;
+                        letter-spacing: 4px;
+                    }
+
                     span {
                         display: block;
                         color: white;
                         font-size: 12px;
                         font-weight: normal;
                         letter-spacing: 0;
+
+                        @media (min-width: 700px) {
+                            font-size: 27px;
+                        }
                     }
                 }
                 h2 {
@@ -82,12 +91,21 @@ body {
                     letter-spacing: 5px;
                     color: $aqua;
 
+                    @media (min-width: 700px) {
+                        font-size: 90px;
+                    }
+
                     .first {
                         display: block;
                         text-transform: lowercase;
                         font-size: 68px;
                         letter-spacing: 6px;
                         line-height: 66px;
+
+                        @media (min-width: 700px) {
+                            font-size: 162px;
+                            line-height: 160px;
+                        }
                     }
                     .second {
                         display: block;
@@ -96,6 +114,11 @@ body {
                         color: $pink;
                         letter-spacing: 3px;
                         margin-top: 10px;
+
+                        @media (min-width: 700px) {
+                            font-size: 36px;
+                            letter-spacing: 5px;
+                        }
                     }
                     .ff {
                         letter-spacing: -1px;
@@ -104,9 +127,16 @@ body {
                 }
                 .img-container {
                     width: 100%;
+                    margin-bottom: 50px;
+                    // background-color: blueviolet;
                     img {
-                        margin-top: 20px;
-                        margin-left: -160px;
+                        width: 90vw;
+                        margin-top: 50px;
+                        margin-left: -100px;
+                        object-fit: contain;
+                        @media (min-width: 700px) {
+                            margin-left: -40%;
+                        }
                     }
                 }
             }
@@ -120,6 +150,11 @@ body {
                 background-color: $violet;
                 color: $pink;
 
+                @media (min-width: 700px) {
+                    min-width: 200px;
+                    width: 200px;
+                }
+
                 .header {
                     position: relative;
                     margin-top: 50px;
@@ -128,26 +163,50 @@ body {
                     display: inline-block;
                     // background-color: burlywood;
                     text-align: right;
+                    @media (min-width: 700px) {
+                        margin-left: 0;
+                        margin-top: 75px;
+                    }
                     h1 {
                         font-size: 19px;
                         letter-spacing: 5px;
                         margin-bottom: 5px;
+
+                        @media (min-width: 700px) {
+                            font-size: 26px;
+                        }
                     }
                     h2 {
                         font-size: 10px;
                         letter-spacing: 2px;
+
+                        @media (min-width: 700px) {
+                            font-size: 13px;
+                        }
                     }
                 }
                 img {
+                    width: 32px;
                     display: block;
                     margin-top: 35px;
                     margin-left: 20px;
+
+                    @media (min-width: 700px) {
+                        width: auto;
+                        margin-top: 50px;
+                        margin-left: 35px;
+                    }
                 }
             }
             .content {
                 // max-width: 260px;
                 margin-top: 30px;
                 margin-bottom: 75px;
+
+                @media (min-width: 700px) {
+                    margin-top: 60px;
+                }
+
                 .avatar {
                     transform: translate(-25px);
                     width: 170px;
@@ -155,8 +214,15 @@ body {
                     padding: 10px;
                     background-color: white;
                     border-radius: 37px;
-
                     margin-bottom: 10px;
+
+                    @media (min-width: 700px) {
+                        transform: translate(-60px);
+                        width: 230px;
+                        height: 300px;
+                        padding: 20px;
+                        border-radius: 50px;
+                    }
 
                     img {
                         text-align: center;
@@ -173,9 +239,19 @@ body {
                     padding-left: 20px;
                     padding-right: 10px;
 
+                    @media (min-width: 700px) {
+                        width: 320px;
+                        margin-left: 160px;
+                        margin-top: -300px;
+                    }
+
                     p {
                         font-size: 12px;
                         margin-bottom: 20px;
+
+                        @media (min-width: 700px) {
+                            font-size: 13px;
+                        }
                     }
                 }
             }
@@ -190,6 +266,11 @@ body {
                 background-color: $violet;
                 color: $pink;
 
+                @media (min-width: 700px) {
+                    min-width: 200px;
+                    width: 200px;
+                }
+
                 .header {
                     margin-top: 50px;
                     margin-left: -60px;
@@ -197,20 +278,40 @@ body {
                     display: inline-block;
                     // background-color: burlywood;
                     text-align: right;
+
+                    @media (min-width: 700px) {
+                        margin-left: -60px;
+                    }
+
                     h1 {
                         font-size: 19px;
                         letter-spacing: 5px;
                         margin-bottom: 5px;
+
+                        @media (min-width: 700px) {
+                            font-size: 26px;
+                        }
                     }
                     h2 {
                         font-size: 10px;
                         letter-spacing: 2px;
+
+                        @media (min-width: 700px) {
+                            font-size: 13px;
+                        }
                     }
                 }
                 img {
+                    width: 32px;
                     display: block;
                     margin-top: 85px;
-                    margin-left: 20px;
+                    margin-left: 25px;
+
+                    @media (min-width: 700px) {
+                        width: auto;
+                        margin-top: 110px;
+                        margin-left: 35px;
+                    }
                 }
                 .types {
                     position: absolute;
@@ -231,6 +332,14 @@ body {
                         letter-spacing: 3px;
                         font-size: 14px;
                         font-weight: bold;
+
+                        @media (min-width: 700px) {
+                            margin-bottom: 200px;
+                            margin-top: 5px;
+                            font-size: 20px;
+                            height: 50px;
+                            width: 140px;
+                        }
                     }
                 }
             }
@@ -250,11 +359,22 @@ body {
                             margin-left: 25px;
                             margin-right: 15px;
                             object-fit: contain;
+
+                            @media (min-width: 700px) {
+                                height: 30px;
+                                width: 95px;
+                                margin-left: 50px;
+                                margin-right: 30px;
+                            }
                         }
                         p {
                             font-size: 14px;
                             font-weight: bold;
                             letter-spacing: 3px;
+
+                            @media (min-width: 700px) {
+                                font-size: 16px;
+                            }
                         }
                     }
                 }
@@ -268,6 +388,11 @@ body {
                 background-color: $violet;
                 color: $pink;
 
+                @media (min-width: 700px) {
+                    min-width: 200px;
+                    width: 200px;
+                }
+
                 .header {
                     position: relative;
                     margin-top: 50px;
@@ -276,20 +401,40 @@ body {
                     display: inline-block;
                     // background-color: burlywood;
                     text-align: right;
+
+                    @media (min-width: 700px) {
+                        margin-left: -25px;
+                        margin-top: 75px;
+                    }
                     h1 {
                         font-size: 19px;
                         letter-spacing: 5px;
                         margin-bottom: 5px;
+
+                        @media (min-width: 700px) {
+                            font-size: 26px;
+                        }
                     }
                     h2 {
                         font-size: 10px;
                         letter-spacing: 2px;
+
+                        @media (min-width: 700px) {
+                            font-size: 13px;
+                        }
                     }
                 }
                 img {
+                    width: 32px;
                     display: block;
                     margin-top: 55px;
-                    margin-left: 20px;
+                    margin-left: 25px;
+
+                    @media (min-width: 700px) {
+                        width: auto;
+                        margin-top: 75px;
+                        margin-left: 35px;
+                    }
                 }
             }
             .project {
@@ -298,6 +443,12 @@ body {
                 padding: 0 20px;
                 margin-top: 25px;
                 margin-bottom: 40px;
+
+                @media (min-width: 700px) {
+                    margin-top: 60px;
+                    margin-bottom: 150px;
+                    padding: 0 30px;
+                }
                 .image {
                     margin-left: -50px;
                     margin-bottom: 25px;
@@ -308,6 +459,19 @@ body {
                     background-color: white;
                     overflow: hidden;
                     padding: 10px;
+
+                    @media (min-width: 700px) {
+                        width: 550px;
+                        height: 360px;
+                        padding: 20px;
+                        border-radius: 100px;
+                        margin-left: -100px;
+                    }
+
+                    @media (min-width: 768px) {
+                        width: 600px;
+                        height: 400px;
+                    }
                     img {
                         min-width: 100%;
                         min-height: 100%;
@@ -315,6 +479,10 @@ body {
                         color: white;
                         border-radius: 50px;
                         object-fit: cover;
+
+                        @media (min-width: 700px) {
+                            border-radius: 80px;
+                        }
                     }
                 }
                 h3 {
@@ -324,6 +492,10 @@ body {
                     letter-spacing: 5px;
                     margin-bottom: 10px;
                     text-transform: uppercase;
+
+                    @media (min-width: 700px) {
+                        font-size: 24px;
+                    }
                 }
                 .tags {
                     p {
@@ -333,18 +505,32 @@ body {
                         margin-right: 5px;
                         margin-bottom: 10px;
                         color: $pink;
+
+                        @media (min-width: 700px) {
+                            font-size: 14px;
+                            margin-bottom: 25px;
+                        }
                     }
                 }
                 p {
                     font-size: 11px;
                     color: black;
                     font-weight: normal;
+                    @media (min-width: 700px) {
+                        font-size: 15px;
+                    }
                 }
                 .media {
                     position: absolute;
                     top: 200px;
                     left: -60px;
+
+                    @media (min-width: 700px) {
+                        top: 470px;
+                        left: -75px;
+                    }
                     img {
+                        width: 36px;
                         display: block;
                         margin-bottom: 15px;
                     }
@@ -352,16 +538,26 @@ body {
             }
         }
         footer {
+            width: 100vw;
+            overflow: hidden;
             background-color: $violet;
             .contact {
                 padding-top: 20px;
                 display: flex;
                 padding-right: 35px;
+                @media (min-width: 700px) {
+                    padding-right: 80px;
+                }
                 .headers {
                     min-width: 100px;
                     width: 100px;
                     background-color: $violet;
                     color: $pink;
+
+                    @media (min-width: 700px) {
+                        min-width: 200px;
+                        width: 200px;
+                    }
 
                     .header {
                         position: relative;
@@ -371,20 +567,40 @@ body {
                         display: inline-block;
                         // background-color: burlywood;
                         text-align: right;
+
+                        @media (min-width: 700px) {
+                            margin-left: -15px;
+                            margin-top: 75px;
+                        }
                         h1 {
                             font-size: 19px;
                             letter-spacing: 5px;
                             margin-bottom: 5px;
+
+                            @media (min-width: 700px) {
+                                font-size: 26px;
+                            }
                         }
                         h2 {
                             font-size: 10px;
                             letter-spacing: 2px;
+
+                            @media (min-width: 700px) {
+                                font-size: 13px;
+                            }
                         }
                     }
                     img {
+                        width: 32px;
                         display: block;
                         margin-top: 55px;
-                        margin-left: 20px;
+                        margin-left: 25px;
+
+                        @media (min-width: 700px) {
+                            width: auto;
+                            margin-top: 65px;
+                            margin-left: 35px;
+                        }
                     }
                 }
                 .content {
@@ -393,18 +609,31 @@ body {
                     // background-color: bisque;
                     width: 100%;
                     text-align: right;
+                    @media (min-width: 700px) {
+                        margin-bottom: 75px;
+                    }
+
                     .media {
                         margin-left: 25px;
                         display: flex;
                         justify-content: space-between;
                         // background-color: aquamarine;
                         margin-bottom: 25px;
+
+                        @media (min-width: 700px) {
+                            margin-left: 250px;
+                        }
                         img {
                             display: block;
                             width: 28px;
                             height: 28px;
                             // background-color: brown;
                             object-fit: cover;
+
+                            @media (min-width: 700px) {
+                                width: 37px;
+                                height: 37px;
+                            }
                         }
                     }
                     p {
@@ -413,6 +642,9 @@ body {
                         font-weight: bold;
                         margin-bottom: 3px;
                         letter-spacing: 3px;
+                        @media (min-width: 700px) {
+                            font-size: 24px;
+                        }
                         a {
                             color: $pink;
                             text-decoration: none;
@@ -421,11 +653,19 @@ body {
                 }
             }
             .rwd {
+                position: relative;
+                z-index: 1;
                 padding: 0 20px;
                 text-align: right;
                 font-size: 12px;
                 line-height: 16px;
                 letter-spacing: 2px;
+                @media (min-width: 700px) {
+                    font-size: 17px;
+                    width: 520px;
+                    text-align: left;
+                    margin-left: 120px;
+                }
                 .first {
                     color: white;
                     margin-bottom: 25px;
@@ -436,14 +676,23 @@ body {
                 }
             }
             .image {
+                position: relative;
+                z-index: 0;
                 overflow: hidden;
                 margin-top: -75px;
+                @media (min-width: 700px) {
+                    margin-top: -150px;
+                }
                 img {
                     display: block;
                     width: 200%;
                     transform: translate(-45%);
                     // background-color: royalblue;
                     object-fit: cover;
+                    @media (min-width: 700px) {
+                        width: 100%;
+                        transform: translate(0);
+                    }
                 }
             }
         }
